fixing some issues with visibility on the site

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,15 @@
+@media (prefers-color-scheme: light), (prefers-color-scheme: dark) {
+  :root {
+    --background-color: #121212;
+    --text-color: #ffffff;
+  }
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -152,7 +164,7 @@ nav a{
   opacity: 0.3; 
   left:0%;
   top: 0%;
-  z-index: -1;
+  z-index: 0;
 }
 
 .banner::before {
